--- a/templates/home.html
+++ b/templates/home.html
@@ -15,8 +15,7 @@
 
     <!-- Website Title -->
     <div class="container">
-        <h2 class='container-heading'><span class='heading_first'>First Innings Score Predictor for Indian Premier
-                League (IPL) </span>
+        <h2 class='container-heading'><span class='heading_first'>I don't like football </span>
             <div class='description'>
                 <p style="font-size: 20px;">A Machine Learning Web App, Built with Flask.</p>
             </div>
@@ -205,11 +204,11 @@
         </div>
     </div>
 
-    
+
 
     <footer
         style="position: fixed; bottom: 0; width: 100%;background-color: black;color: ivory;text-align: center;padding-top: 5px;padding-bottom: 5px;">
-        Made with ❤️ by Abhishek Sharma.
+        Made without ❤️ by Mátis Krisztián.
     </footer>
 
 
